Added a bunch of nullability annotations as well as final-markers
Made MenuItem abstact, not because instancing it was faulty, but it was not as verbose as I wished it to be.

moved describing a MgRegion into the MgRegion class, as central information point.